# ledger-afa

./: .gitignore  README.md  afa.py  ledger-afa.py  ledger_afa.py  requirements.txt  setup.cfg  tox.ini
tests/: conftest.py  test_functions.py
tests/data/: additional_purchase.journal  many_transactions.journal  single_transaction.journal  split_invoice.journal
