[metadata]
name = ledger-afa
author = Tagirijus
author-email = info@tagirijus.de
summary = A program for calculating and displaying tax deprecation on specified items in a ledger journal.
description-file = README.md
home-page = http://github.com/Tagirijus/ledger-afa
classifier =
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Development Status :: 5 - Production/Stable
  Intended Audience :: End Users/Desktop
  Topic :: Office/Business :: Financial

[files]
packages = ledger_afa

[entry_points]
console_scripts =
    ledger-afa = ledger_afa:main
